# larch-bo

./: .gitignore  README.md  pyproject.toml
bo/client/: pyproject.toml  setup.py
bo/client/larch/bo/: __init__.py
bo/client/larch/bo/client/: animate.py  browser.py  command.py  control.py  i18n.py  session.py  textlayout.py
bo/client/larch/bo/packer/: __init__.py  gettext.py  html.py  linker.py  npm.py  package.json  parcel.py  transpile.py
bo/client/tests/browser/command/: command.py
bo/client/tests/browser/dialog/: dialog.py
bo/client/tests/browser/grid/: grid.py  grid.scss  test_grid.py  ui.py
bo/client/tests/browser/hello/: hello.py
bo/client/tests/browser/server/: test_grid.py
bo/client/tests/browser/table/: table.py  ui.py
bo/client/tests/browser/upload/: upload.py
bo/client/tests/playground/: playground.py
bo/client/tests/python/: test_textlayout.py
bo/client/tests/qt/window/: window.py
bo/qt-application/larch/bo/qt/: __init__.py  debug.py  pointcuts.py  start.py  window.py
bo/server/: setup.py
bo/server/larch/bo/api/: file.py
bo/server/larch/bo/server/: application.py  resource.py  start.py
client/: pyproject.toml  setup.py
client/larch/bo/: __init__.py
client/larch/bo/client/: animate.py  control.py  textlayout.py
client/larch/bo/client/command/: mb.py  (+2 more)
client/larch/bo/packer/: html.py  linker.py  parcel.py  transpile.py
client/tests/browser/command/: command.py
client/tests/browser/dialog/: dialog.py
client/tests/browser/server/: grid.scss  test_grid.py
client/tests/browser/table/: table.py
client/tests/qt/window/: window.py
larch/: __init__.py
larch/bo/: __init__.py
larch/bo/api/: __init__.py
larch/bo/client/: browser.py  session.py  textlayout.py
larch/bo/client/file/: __init__.py
larch/bo/client/grid/: larch.bo.grid.scss  snippets.py  splitter.py
larch/bo/client/table/: parser.py  selection.py  state.py
larch/bo/packer/: npm.py  parcel.py  transpile.py
larch/bo/qt/: __init__.py  start.py
larch/bo/server/: __init__.py  application.py
larch/bo/server/gevent/: debug.py  websocket.py
qt-application/: setup.py
server/: pyproject.toml  setup.py
server/larch/bo/server/: resource.py  start.py
server/larch/bo/server/gevent/: __init__.py  debug.py
tests/browser/control/: control.py
tests/browser/dialog/: dialog.py
tests/browser/upload/: upload.py
tests/python/: test_textlayout.py
(+69 files in other folders)
