[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "larch-browser-objects-server"
version = "0.0.1"
license = {text = "BSD"}
authors = [{name = "Michael Reithinger", email = "mreithinger@web.de"}]
keywords = ["library"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Programming Language :: Python :: 3", "Topic :: Software Development :: Libraries :: Python Modules"]
description = "A transcrypt react ui library, server components"
readme = "README.md"

[project.optional-dependencies]

